--- a/PermanentEvasion/PermanentEvasion/PermanentEvasion.csproj
+++ b/PermanentEvasion/PermanentEvasion/PermanentEvasion.csproj
@@ -78,10 +78,10 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
-xcopy $(TargetPath) $(SolutionDir)..\Release\$(TargetName)\ /Y
-xcopy $(ProjectDir)mod.json $(SolutionDir)..\Release\$(TargetName)\ /Y
-xcopy $(ProjectDir)settings.json $(SolutionDir)..\Release\$(TargetName)\ /Y
-xcopy $(ProjectDir)readme.txt $(SolutionDir)..\Release\$(TargetName)\ /Y</PostBuildEvent>
+xcopy "$(TargetPath)" "$(SolutionDir)..\Release\$(TargetName)\" /Y
+xcopy "$(ProjectDir)mod.json" "$(SolutionDir)..\Release\$(TargetName)\" /Y
+xcopy "$(ProjectDir)settings.json" "$(SolutionDir)..\Release\$(TargetName)\" /Y
+xcopy "$(ProjectDir)readme.txt" "$(SolutionDir)..\Release\$(TargetName)\" /Y</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
