Added (back) Movement based check
Added (back) Movement based check for keeping evasion as an optional feature as requested by TheHaribo.

--- a/PermanentEvasion/PermanentEvasion/settings.json
+++ b/PermanentEvasion/PermanentEvasion/settings.json
@@ -11,5 +11,12 @@
   "AcePilotPointToKeepPips": 8,
   "MaxTotalChanceTokeepPips": 90,
   "MinDamageForEvasionStrip": 25,
-  "AllowHitStrip": true
+  "AllowHitStrip": true,
+  "Movement210KeepPipsCount": 5,
+  "Movement190KeepPipsCount": 4,
+  "Movement165KeepPipsCount" : 4,
+  "Movement140KeepPipsCount": 4,
+  "Movement120KeepPipsCount": 3,
+  "Movement95KeepPipsCount": 2,
+  "UseMovement": false
 }
